# HackCulture-HyperHack-2026

./: .gitignore  Challenge Briefing.html  README.md
project/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
project/configs/: category_thresholds.yaml  gst_rules.yaml  settings.yaml
project/docs/: architecture.md  detector_catalog.md  innovation_notes.md  prompt_registry.md
project/scripts/: _debug_data.py  _debug_data2.py  _debug_data3.py  analyze_date_cascade.py  analyze_findings.py  analyze_pdf.py  analyze_score.py  analyze_tax.py  check_arithmetic.py  check_dates.py  check_extraction.py  check_quality.py  check_splits.py  check_state.py  diagnose_po.py  diagnose_v4.py  diagnose_v5.py  diagnose_v5b.py  diff_v3_v4.py  inspect_exp_notes.py  inspect_formats.py  inspect_gaps.py  inspect_gaps2.py  inspect_gst.py  run_detection.py  run_full.py  run_full_pipeline.sh  run_stage1_3.py  run_stage1_5.py  show_raw_text.py  show_raw_text2.py  test_bank_extract.py  test_po_extract.py  test_po_extract2.py
project/src/: cli.py  main.py
project/src/adjudication/: confidence.py
project/src/agents/: __init__.py  detection_agents.py  llm.py  orchestrator.py  tools.py
project/src/core/: config.py  enums.py  logging.py  models.py  paths.py  utils.py
project/src/detectors/: base.py
project/src/extraction/: llm_structured_extract.py  text_extract.py  vendor_master.py
project/tests/: test_arithmetic.py  test_balance_drift.py  test_circular_reference.py  test_dates.py  test_normalization.py  test_quantity_accumulation.py
(+37 files in other folders)
