[project]
name = "needle-finder"
version = "1.0.0"
description = "Financial Needle in the Haystack - AP Bundle Error Detection Pipeline"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "typer[all]>=0.9",
    "rich>=13.0",
    "loguru>=0.7",
    "PyMuPDF>=1.24",
    "pdfplumber>=0.10",
    "httpx>=0.25",
    "tenacity>=8.0",
    "duckdb>=0.10",
    "networkx>=3.0",
    "rapidfuzz>=3.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "boto3>=1.34",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
needle = "src.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
